--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,29 @@
+:root {
+    --primary-dark: linear-gradient(-225deg,
+            #231557 0%,
+            #44107a 29%,
+            #ff1361 67%,
+            #00ff04 100%);
+    --primary-light: #000000;
+    --secondary-light: black;}
+
+
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     
-     background-image: linear-gradient(to right, rgb(136, 134, 66), rgb(133, 72, 155)); */
+     background-image: linear-gradient(to right, rgb(136, 134, 66), rgb(133, 72, 155)); 
 
 }
 header{
     display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: row;
-        width: 500px;
+    justify-content:space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 600px;
 
 }
 footer{
@@ -24,6 +35,7 @@ footer{
     
 }
 div{
+    
     background-color: whitesmoke;
 }
 
@@ -53,6 +65,42 @@ h1{
                 background-position: 200% center;
             }
         }
+input[type='range'] {
+  -webkit-appearance: none;
+  background-color: var(--primary-light);
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+  height: 10px;
+  border: 1px solid var(--primary-dark);
+  border-radius: 25px;
+  background: var(--secondary-light);
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 24px;
+  height: 24px;
+  border-radius: 25px;
+  margin-top: -8px;
+  background: var(--primary-dark);
+}
+        
+
+
+.myslider {
+    -webkit-appearance: none;
+    background: #FCF3CF;
+    width: 50%;
+    height: 20px;
+    opacity: 2;
+     }
+
+.myslider:hover {
+    opacity: 1;
+}
+
+
 .glow-on-hover {
     width: 220px;
     height: 50px;
